--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,9 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  # Add this line to manually override GTMSessionFetcher/Core version
+  # This forces it to use a version compatible with Firebase (>= 3.4), hoping it works with GoogleSignIn
+  # pod 'GTMSessionFetcher/Core', '~> 4.0' # <-- Bu satırı EKLEYİN
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
