--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
-  firebase_auth: ^5.5.3
+  firebase_auth: ^5.0.0
   cloud_firestore: ^5.6.7
   device_info_plus: ^11.4.0
+  google_sign_in: ^6.3.0
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+    - lib/assets/logo.png
+    - lib/assets/ios_neutral_sq_na@2x.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
