--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   device_info_plus: ^11.4.0
   google_sign_in: ^6.3.0
   sign_in_with_apple: ^7.0.1
+  firebase_app_check: ^0.3.2+6
 
 dev_dependencies:
   flutter_test:
