--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,9 @@ name: referee_aplication
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -17,9 +18,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
+# # Bu bölümler flutter dışında olmalı!
+flutter_gen:
+  integrations:
+    flutter_localizations: true
+
+# Yerelleştirme ayarları
+# Bu ayarlar flutter: bloğunun DIŞINDA olmalı
+# flutter gen-l10n komutu bunu kullanır
+l10n:
+  arb-dir: lib/l10n
+  template-arb-file: app_en.arb
+  output-localization-file: app_localizations.dart
+  output-class: AppLocalizations
+  output-dir: lib/generated # Çıktı dizini
+  # Bu dizin, l10n çıktısı için kullanılacak
+  preferred-supported-locales:
+    - en
+    - tr
 
 environment:
   sdk: ^3.7.2
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +61,15 @@ dependencies:
   google_sign_in: ^6.3.0
   sign_in_with_apple: ^7.0.1
   firebase_app_check: ^0.3.2+6
+  shared_preferences: ^2.2.2
+
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  # flutter_gen: ^6.0.0
+  # flutter_local_notifications: ^15.0.0
+  # flutter_secure_storage: ^8.0.0
+  # flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +126,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  generate: true
+
