--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
+  image_picker: ^1.1.2
   # flutter_gen: ^6.0.0
   # flutter_local_notifications: ^15.0.0
   # flutter_secure_storage: ^8.0.0
