--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   image_picker: ^1.1.2
+  intl_phone_field: ^3.2.0
+  geolocator: ^14.0.1
+  geocoding: ^4.0.0
   # flutter_gen: ^6.0.0
   # flutter_local_notifications: ^15.0.0
   # flutter_secure_storage: ^8.0.0
